Fix spacing in header

--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -39,7 +39,7 @@
     /* ---------- Package Section ---------- */
 
     .row.package-section__content {
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap: var(--spacing-12);
     }
 
@@ -58,7 +58,7 @@
 
 @media only screen and (max-width: 48em) {
     html {
-        font-size: 37.5%; /* 6px */
+        font-size: 43.75%; /* 7px */
     }
     .row {
         padding: 0 var(--spacing-10);
@@ -66,9 +66,6 @@
 }
 
 @media only screen and (max-width: 30em) {
-    html {
-        font-size: 43.75%; /* 7px */
-    }
     .row {
         padding: 0 var(--spacing-9);
     }
@@ -94,5 +91,10 @@
     .header__buttons {
         flex-direction: column;
         gap: var(--spacing-7);
+        margin-bottom: var(--spacing-7);
+    }
+
+    .advantages-section__list li {
+        flex: 100%;
     }
 }
